--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "ag-grid-community": "^26.0.0",
     "ag-grid-react": "^26.0.0",
     "axios-observable": "^1.3.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-macros": "^3.1.0",
     "classnames": "^2.3.1",
     "css-loader": "^6.2.0",
     "file-loader": "^6.2.0",
