--- a/package.json
+++ b/package.json
@@ -6,31 +6,45 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/scssMap.js",
+      "^.+\\.(css|less|scss)$": "<rootDir>/src/scssMap.js"
+    },
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/legacy_notes_and_workbook/",
+      "<rootDir>/client/src/stylesheets/"
+    ]
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "ag-grid-community": "^26.0.0",
-    "ag-grid-react": "^26.0.0",
     "axios-observable": "^1.3.0",
+    "babel-jest": "^27.2.5",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.1.0",
     "classnames": "^2.3.1",
     "css-loader": "^6.2.0",
+    "enzyme": "^3.11.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.2.5",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.3.0",
+    "react-test-renderer": "^17.0.2",
     "react-transition-group": "^4.4.2",
     "rxjs": "^7.3.0",
     "sass-loader": "^12.1.0",
